@@ -2,10 +2,10 @@
 \documentclass[a4paper,english]{article}
 \usepackage{fixltx2e} % LaTeX patches, \textsubscript
 \usepackage{cmap} % fix search and cut-and-paste in PDF
-\usepackage{babel}
 \usepackage[T1]{fontenc}
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
+\usepackage{babel}
 
 %%% Custom LaTeX preamble
 % PDF Standard Fonts
