@@ -46,6 +46,7 @@ Changes Since 0.6
   - New ``latex_preamble`` setting.
   - Use PDF standard fonts (Times/Helvetica/Courier) as default.
   - Fix hyperlink targets (labels) for images, figures, and tables.
+  - Apply [ 2961988 ] Load babel after inputenc and fontenc.
 
 __ docs/ref/restructuredtext.html#inline-literals
 __ docs/user/config.html#docutils-footnotes
